Fix bug - not wrapping long URLs

--- a/themes/kiwitrees/style.css
+++ b/themes/kiwitrees/style.css
@@ -1975,6 +1975,7 @@ ul.ui-autocomplete li a:hover {
 
 .wrap {
 	white-space: normal;
+	word-break: break-all;
 }
 
 ul.clist {
